--- a/styles.scss
+++ b/styles.scss
@@ -6,21 +6,22 @@ $color-secondary: #1e90ff;
 	margin: 0;
 	padding: 0;
 	box-sizing: content-box;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 main {
 	display: grid;
-	grid-template: "header none"
-					"prompt none"
-					"text sidebar" / 6fr 2fr;
+	grid-template:
+		'header none'
+		'prompt none'
+		'text sidebar' / 6fr 2fr;
 	background: $color-dim;
 	padding: 1em 2em;
 
 	h1 {
 		grid-area: header;
 	}
-	
+
 	h3 {
 		padding: 0.2em 0;
 		grid-area: prompt;
@@ -45,17 +46,17 @@ main {
 		grid-area: sidebar;
 		background: $color-secondary;
 		height: fit-content;
-		
+
 		h2 {
 			text-align: center;
 			font-size: xx-large;
 			padding: 10px;
 			color: $color-primary;
 		}
-		
-		div[is = device-list] {
+
+		div[is='device-list'] {
 			height: 700px;
-			
+
 			ul.device-col {
 				box-sizing: border-box;
 				padding: 0.2em;
@@ -63,15 +64,16 @@ main {
 				background: $color-primary;
 				overflow-y: scroll;
 				height: 741px;
-				
+
 				li.device-card {
 					padding: 0.3em;
 					border: 1px solid black;
 					border-radius: 3px;
 					margin-bottom: 0.2em;
 					display: grid;
-					grid-template: "certainty head"
-									"certainty description" / 2fr 12fr;
+					grid-template:
+						'certainty head'
+						'certainty description' / 2fr 12fr;
 					position: relative;
 
 					&::before {
@@ -82,7 +84,7 @@ main {
 						height: 103%;
 						border-radius: 3px 0px 0px 3px;
 						border-left: 5px solid;
-						content: "";
+						content: '';
 					}
 
 					div.certainty {
@@ -91,10 +93,10 @@ main {
 						font-size: larger;
 						margin: auto;
 					}
-					
+
 					div.head {
 						display: grid;
-						grid-template: "device num" / 29fr 1fr;
+						grid-template: 'device num' / 29fr 1fr;
 						grid-area: head;
 
 						h3 {
